--- a/src/main/resources/templates/facturacion/crear_factura.html
+++ b/src/main/resources/templates/facturacion/crear_factura.html
@@ -17,17 +17,18 @@
 
 <div class="container mt-4">
     <h2 class="mb-4 text-center">Nueva Factura</h2>
-    <form th:action="@{/facturacion/facturas}" th:object="${factura}" enctype="multipart/form-data" class="needs-validation" method="post" novalidate>
+    <form th:action="@{/facturacion/facturas}" th:object="${factura}" enctype="multipart/form-data"
+          class="needs-validation" method="post" novalidate>
         <div class="row">
 
             <div class="col-md-8">
                 <!-- Detalles de la factura -->
-                <h3>Detalles de la Factura:</h3>
-
+                <h4>Detalles de la Factura:</h4>
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <label for="id_factura" class="form-label">Número de Factura:</label>
-                        <input type="text" id="id_factura" name="id_factura" th:field="*{id_factura}" class="form-control" disabled>
+                        <input type="text" id="id_factura" name="id_factura" th:field="*{id_factura}"
+                               class="form-control" disabled>
                     </div>
                     <div class="col-md-6">
                         <label for="fecha" class="form-label">Fecha:</label>
@@ -35,33 +36,33 @@
                     </div>
                 </div>
 
-                <h3>Datos del Cliente</h3>
-                <div class="mb-3 d-flex align-items-start">
-                    <select id="cliente" name="cliente.id_cliente" th:field="*{cliente.id_cliente}" class="form-select me-2" required>
-                        <option value="" selected>Selecciona un Cliente</option>
-                        <option th:each="cliente : ${clientes}" th:value="${cliente.id_cliente}" th:text="${cliente.nombre}"></option>
-                    </select>
+                <h4>Datos del Cliente</h4>
+                <div class="mb-3">
+                    <label for="customer-search" class="form-label">Buscar Cliente:</label>
+                    <input type="text" id="customer-search" class="form-control" placeholder="Escribe para buscar...">
+                    <ul id="customer-list" class="list-group" style="display: none;"></ul>
+                    <input type="hidden" id="cliente" name="cliente.id_cliente" th:field="*{cliente.id_cliente}">
                     <div class="invalid-feedback">
                         Por favor, seleccione un Cliente.
                     </div>
-                    <a th:href="@{#}" class="btn btn-success btn-sm">Añadir</a>
-
                 </div>
-
 
                 <h3>Detalle</h3>
                 <div class="mb-3">
                     <label for="producto" class="form-label">Producto:</label>
-                    <select id="producto" name="producto.producto" th:field="*{producto.producto}" class="form-select" required>
+                    <select id="producto" name="detalle.producto.producto" th:field="*{detalle.producto.producto}"
+                            class="form-select"
+                            required>
                         <option value="" selected>Selecciona un Producto</option>
-                        <option th:each="producto : ${productos}" th:value="${producto.id_producto}" th:text="${producto.producto}"></option>
+                        <option th:each="producto : ${productos}" th:value="${producto.id_producto}"
+                                th:text="${producto.producto}"></option>
                     </select>
                     <div class="invalid-feedback">
                         Por favor, seleccione un Producto.
                     </div>
                 </div>
-
                 <!-- Los productos seleccionados en el buscador -->
+
                 <div class="table-responsive">
                     <table class="table table-striped table-hover">
                         <thead>
@@ -78,55 +79,76 @@
                             <td class="align-middle" th:text="${producto.id_producto}">[ID]</td>
                             <td class="align-middle">
                                 <div class="d-flex align-items-center">
-                                    <img th:src="@{${producto.icono}}" alt="Icono de Producto" class="me-2" style="width: 32px; height: 32px;">
+                                    <img th:src="@{'http://localhost:8080' + ${producto.icono}}"
+                                         alt="Icono del Producto"
+                                         class="img-fluid me-2" style="width: 40px; height: 40px;">
                                     <div>
-                                        <div th:text="${producto.nombre}">[Nombre del Producto]</div>
-                                        <small class="text-muted" th:text="${producto.categoria}">[Categoría del Producto]</small>
+                                        <div th:text="${producto.producto}">[Nombre del Producto]</div>
+                                        <small class="text-muted" th:text="${producto.categoria.categoria}">[Categoría
+                                            del
+                                            Producto]</small>
                                     </div>
                                 </div>
                             </td>
                             <td class="align-middle" th:text="${producto.cantidad}">[Cantidad]</td>
-                            <td class="align-middle" th:text="${producto.precio_unitario}">[Precio Unitario]</td>
+                            <td class="align-middle" th:text="${producto.precio}">[Precio Unitario]</td>
                             <td class="align-middle">
-                                <!-- Eliminar producto de la lista, no de la base, eliminar del detalle -->
                                 <a th:href="@{#}" class="btn btn-danger btn-sm">Eliminar</a>
                             </td>
                         </tr>
                         </tbody>
                     </table>
+
                 </div>
             </div>
 
             <div class="col-md-4">
-                <h3>Forma de Pago</h3>
-                <div class="mb-3">
-                    <label for="forma_pago" class="form-label">Forma de Pago:</label>
-                    <select id="forma_pago" name="factura.forma_pago.id_formaPago" th:field="*{factura.forma_pago.id_formaPago}" class="form-select" required>
-                        <option value="" selected>Selecciona una Forma de Pago</option>
-                        <option th:each="forma_pago : ${formas_pago}" th:value="${forma_pago.id_formaPago}" th:text="${forma_pago.descripcion}"></option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Por favor, seleccione una Forma de Pago.
-                    </div>
-                </div>
 
-                <h5>Total a Pagar:</h5>
-                <div>
-                    <p>Subtotal: <span th:text="${factura.subtotal}">[Subtotal]</span></p>
-                    <p>Total IVA: <span th:text="${factura.totalIva}">[Total IVA]</span></p>
-                    <p>TOTAL: <span th:text="${factura.total}">[TOTAL]</span></p>
-                </div>
-
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Guardar</button>
-                </div>
             </div>
         </div>
     </form>
 </div>
 
 <!-- Scripts de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $("#customer-search").on("input", function() {
+            var query = $(this).val();
+            if (query.length > 0) { // Cambiado para que la búsqueda comience desde la primera letra
+                $.ajax({
+                    url: "/facturacion/clientes/buscar",
+                    type: "GET",
+                    data: { query: query },
+                    success: function(data) {
+                        if (data.length > 0) {
+                            $("#customer-list").empty().show();
+                            data.forEach(function(customer) {
+                                $("#customer-list").append('<li class="list-group-item" data-id="' + customer.id_cliente + '">' + customer.nombre + ' ' + customer.apellido + '</li>');
+                            });
+                        } else {
+                            $("#customer-list").empty().append('<li class="list-group-item">Cliente no encontrado</li>').show();
+                        }
+                    }
+                });
+            } else {
+                $("#customer-list").hide();
+            }
+        });
+
+        $(document).on("click", "#customer-list li", function() {
+            var selectedCustomer = $(this).text();
+            var customerId = $(this).data("id");
+            $("#customer-search").val(selectedCustomer);
+            $("#cliente").val(customerId);
+            $("#customer-list").hide();
+        });
+    });
+</script>
 
 <script>
     // Ejemplo de JavaScript para validación de formularios
